examples/test/testpolicy14645.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14645
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key37: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value1
          key9: value26
      podSelector:
        matchLabels:
          key44: value15
          key9: value21
